--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@
 .topnav{
     position: relative;
     text-align:center;
-    padding:14px 16px;
+    padding:33.3333%x 16px;
     
 }
 
@@ -64,20 +64,35 @@ a{
     }
 
 h1{
+    font-size:90px;
     margin:50px;
     margin-left:500px;
-    margin-top:-350px;
-    margin-bottom:120px;
+    margin-right:200px;
+    margin-top:-400px;
+    margin-bottom:80px;
     font-family: 'Chelsea Market', cursive;
     text-align:center;
  }
 
+ .line1{
+     margin-left:110px;
+     margin-right:20px;
+     font-size:30px;
+ }
+
+ .line2{
+     font-size:30px;
+     margin-left:230px;
+     margin-right:130px;
+ }
+
 h2{
     margin:50px;
+    margin-left:15px;
+    margin-right:15px;
     background-color:#DDB9A3;
     color: white;
-    padding:15px;
-}
+    }
 
 h3{
     margin-top:50px;
@@ -101,7 +116,7 @@ h4{
 }
 
 footer{
-    margin-top:200px;
+    margin-top:150px;
     background-color:#F9E7DC;
 }
 
